fix: se soluciona lombox con sus versiones