@@ -30,16 +30,25 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+//	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+	//compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
+	//annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.6.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 
 }
+
+//tasks.withType(JavaExec) {
+//	jvmArgs += [
+//			'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+//	]
+//}
+
 
 test {
 	useJUnitPlatform()
